# guidance-for-building-a-real-time-bidder-for-advertising-on-aws

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE.md  README-2.md  README.md  buildspec.yml  check-pod-logs.sh  cleanup-pods.sh  client-setup.sh  cloud9-setup.sh  config.mk  deployapp.sh  initialize-repo.sh  playground.ipynb  post-build.sh  run-benchmark.sh  run-golangci-lint.sh  update-node-group-size.sh
apps/bidder/: README.md  go.mod  go.sum
apps/model/: auction.go  client.go  client.py  model-settings.json  settings.json
cdk/: README.MD
cdk/pipeline/: .gitignore  app.py  cdk.context.json.example  cdk.json  setup.py
deployment/infrastructure/: Makefile  application.yaml  codekit.yaml  dynamodb.yaml  template.drawio
docs/: README.md  limitations.md
docs/benchmarks/: guide.md  index.md  profiling.md  report_template.md
docs/bidder/: application-architecture.md  pinning-to-cpu-cores.md
docs/infrastructure/: README.md  aerospike.md  architecture.md  deployment.md
tools/benchmark-utils/: README.md  benchmark_bidder_kinesis.sh  benchmark_fasthttp.sh  functions.sh
tools/datagen/: .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum
tools/e2e/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  gcc  mypy.ini  pylintrc  pyproject.toml  run-linter.sh  setup.cfg
tools/e2e/tests/: __init__.py  bidder_client.py  conftest.py  db_client.py  test_bid.py  test_endpoints.py  test_stream.py
tools/ecr/: Makefile  update-mirror.sh
tools/helm/: Dockerfile  Makefile
tools/load-generator/: .golangci.yml  go.mod  (+6 more)
(+371 files in other folders)
